--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
     body {
-      background: url('https://tse4.mm.bing.net/th?id=OIG4.TQUUA.6XtXWoxMxvqKFS&pid=ImgGn') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/736x/94/ae/fe/94aefebbb20286aedf467dea994fda32.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #fff;
       font-family: 'Roboto', sans-serif;
