--- a/page2.html
+++ b/page2.html
@@ -9,7 +9,7 @@
     @import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
 
     body {
-      background: url('https://tse1.mm.bing.net/th?id=OIG1.pbf1daGmACQ5B.e4nhNM&pid=ImgGn') no-repeat center center fixed;
+      background: url('https://i.pinimg.com/736x/ed/1b/d3/ed1bd33001783579cd98fbaa01585877.jpg') no-repeat center center fixed;
       background-size: cover;
       color: #ffffff;
       font-family: 'Roboto', sans-serif;
